changes in header and footer styles.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,13 @@
 <body>
     <header>
       <div style="float:left;">
-        <h1 class="site-title brand">
+        <h1 class="site-title brand boxed">
             <a href="/" class="prime">{{ site.name }}</a>
-            <span style="font-family=Audiowide;">rework</span>
         </h1>
       </div>
         
 
-    <div style="float:left; margin-left: 280px;">
+    <div style="float:left; margin-left: 378px;">
     <nav>
         <ul class="clearfix">
             <li><i class="icon-home white-color"></i> <a href="/" class="fanchor header-nav">HOME</a></li>
