--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,7 @@ header nav ul li {
     margin-top: 1rem;
 }
 .search-results a {
-    color: #222;
+    color: #FFFFFF;
 }
 /*------------------------------------*\
     $CONTENT
